add the link of weekOne

--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="all.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Top page</h1>
+    <h1>Index page</h1>
     <a href="weekOne/index.html">week 1</a>
+    <div class="alert alert-primary" role="alert">
+       <a href="weekOne/index.html" class="alert-link">Week One</a>
+    </div>
 </body>
 </html>
