--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <h1>Index page</h1>
-    <a href="weekOne/index.html">week 1</a>
-    <div class="alert alert-primary" role="alert">
-       <a href="weekOne/index.html" class="alert-link">Week One</a>
+    <div class="container">
+        <div class="alert alert-primary" role="alert">
+            <a href="weekOne/index.html" class="alert-link">Week One</a>
+         </div>
+
     </div>
+    
 </body>
 </html>
