Create links for assignment.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index page</h1>
+   
     <div class="container">
+        <h1>Index page</h1>
         <div class="alert alert-primary" role="alert">
             <a href="weekOne/index.html" class="alert-link">Week One</a>
+         </div>
+         <div class="alert alert-primary" role="alert">
+            <a href="weekTwo/index.html" class="alert-link">Week Two</a>
          </div>
 
     </div>
