finsished assingment of week two

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="css/all.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
             <a href="weekTwo/index.html" class="alert-link">Week Two</a>
          </div>
 
-    </div>
+    </div>  
     
 </body>
 </html>
