--- a/weekTwo/index.html
+++ b/weekTwo/index.html
@@ -4,8 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-    week two
+<main>
+    <div class="jumbotron">
+        <div class="jumbotron-content">
+        <h5>Here's</h5>
+        <h1>JOANNE</h1>
+        <p>Founder of ‘’XXXD Official’’ & Graphic Designer</p>
+        <ul>
+            <li><a class="behence" href="#"></a></li>
+            <li><a class="facebook" href="#"></a></li>
+            <li><a class="instagram" href="#"></a></li>
+            <li><a class="youtube" href="#"></a></li>
+        </ul>
+        </div>
+    </div>
+    <div class="about">
+        <h1 class="font-robot-title">About</h1>
+        <img src="img/photo.png" alt="">
+        <ul class="profile font-rotobo-bold">
+            <li>Joanne Chen</li>
+            <li>1997/10/10</li>
+            <li>National Hex School Normal University</li>   
+            <li> Department of Visual Design</li>       
+        </ul>
+        <hr>
+        <ul class="font-rotobo-bold">
+            <li>Founder of ‘’XXXD Official’’</li>
+            <li>Graphic Designer</li>
+            <li>Graphic Intern of Hex School</li>
+        </ul>
+    </div>
+    <div class="myBrand">
+        <h1 class="font-robot-title">My Brand ‘’XXXD’’</h1>
+        <h5 class="font-rotobo-medium">Just Keep XXXD Everyday</h5>
+        <ul>
+            <li>2020 年創立的個人服飾品牌</li>
+            <li>引領叛逆少年開啟與社會對話的窗口</li>
+            <li>主打概念潮流T-Shirt</li>
+        </ul>
+        <ul class="work-pictures">
+            <li><img src="img/brand_img1.png" alt="brand_img1"></li>
+            <li><img src="img/brand_img2.png" alt="brand_img2"></li>
+            <li><img src="img/brand_img3.png" alt="brand_img3"></li>
+        </ul>
+    </div>
+    <div class="otherWorks ">
+        <h1 class="font-robot-title">Other Works</h1>
+        <p>2016-2020 年累積的作品</p>
+        <p>海報/廣告/攝影/LOGO/3D</p>
+        <ul>
+            <li class="posters">
+                <ul>
+                    <li><img src="img/work_img1.png" alt=""><p></p></li>
+                    <li><img src="img/work_img2.png" alt=""><p></p></li>
+                    <li><img src="img/work_img3.png" alt=""><p></p></li>
+                </ul>
+                <p>海報設計/2018</p>
+            </li>
+            <li class="photograph">
+                <ul>
+                    <li><img src="img/work_img4.png" alt=""><p>概念攝影/2018</p></li>
+                    <li><img src="img/work_img5.png" alt=""><p>概念攝影/2018</p></li>
+                </ul>
+            </li>
+            <li class="design">
+                <ul>
+                    <li><img src="img/work_img6.png" alt=""><p>sasa 酒標設計/2019</p></li>
+                    <li><img src="img/work_img7.png" alt=""><p>攝影創作/2018</p></li>
+                    <li><img src="img/work_img8.png" alt=""><p>官網設計/2020</p></li>
+                </ul>
+                
+            </li>
+        </ul>
+    </div>
+    <div class="contact">
+        <h1>Contact</h1>
+        <p>Mail：xxxd@hexschool.com</p>
+        <p>Phone Number：0910123456</p>
+    </div>
+</main> 
 </body>
 </html>
