Revised the problem about icon disapeared in footer

--- a/weekOne/index.html
+++ b/weekOne/index.html
@@ -117,9 +117,9 @@
            <li>作品連結：https://www.behance.net/xxxdddddd</li>
            <li>
                 <ul class="sns-logos">
-                    <li><div class="facebook"></div></li>
-                    <li><div class="intagram"></div></li>
-                    <li><div class="line"></div></li>
+                    <li><a class="facebook" herf="#"></a></li>
+                    <li><a class="intagram" herf="#"></a></li>
+                    <li><a class="line" herf="#"></a></li>
                 </ul>
            </li>
        </ul>
