--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
    
     <div class="container">
-        <h1>Index page</h1>
+        <h1>六角學園 網頁切版直播班 版型作業</h1>
+        <h3>Index</h3>
         <div class="alert alert-primary" role="alert">
-            <a href="weekOne/index.html" class="alert-link">Week One</a>
+            <a href="weekOne/index.html" class="alert-link"> Week One</a>
          </div>
          <div class="alert alert-primary" role="alert">
-            <a href="weekTwo/index.html" class="alert-link">Week Two</a>
+            <a href="weekTwo/index.html" class="alert-link"> Week Two</a>
          </div>
-
     </div>  
     
 </body>
