add the tag of target

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1>六角學園 網頁切版直播班 版型作業</h1>
         <h3>Index</h3>
         <div class="alert alert-primary" role="alert">
-            <a href="weekOne/index.html" class="alert-link"> Week One</a>
+            <a href="weekOne/index.html" class="alert-link" target="_blank"> Week One</a>
          </div>
          <div class="alert alert-primary" role="alert">
-            <a href="weekTwo/index.html" class="alert-link"> Week Two</a>
+            <a href="weekTwo/index.html" class="alert-link" target="_blank"> Week Two</a>
          </div>
     </div>  
     
