Revise the length of p in jumbotron

--- a/weekTwo/index.html
+++ b/weekTwo/index.html
@@ -13,7 +13,8 @@
         <div class="jumbotron-content">
         <h5>Here's</h5>
         <h1>JOANNE</h1>
-        <p>Founder of ‘’XXXD Official’’ & Graphic Designer</p>
+        <p>Founder of "XXXD Official"
+        & Graphic Designer</p>
         <ul>
             <li><a class="behence" href="#"></a></li>
             <li><a class="facebook" href="#"></a></li>
