--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
-    <link rel="stylesheet" href="/public/css/all.css">
+    <link rel="stylesheet" href="./public/css/all.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,10 +13,10 @@
         <h1>六角學園 網頁切版直播班 版型作業</h1>
         <h3>Index</h3>
         <div class="alert alert-primary" role="alert">
-            <a href="/public/weekOne/index.html" class="alert-link" target="_blank"> Week One</a>
+            <a href="./public/weekOne/index.html" class="alert-link" target="_blank"> Week One</a>
          </div>
          <div class="alert alert-primary" role="alert">
-            <a href="/public/weekTwo/index.html" class="alert-link" target="_blank"> Week Two</a>
+            <a href="./public/weekTwo/index.html" class="alert-link" target="_blank"> Week Two</a>
          </div>
     </div>  
     
