web version is ok.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
          <div class="alert alert-primary" role="alert">
             <a href="./public/weekTwo/index.html" class="alert-link" target="_blank"> Week Two</a>
          </div>
+         <div class="alert alert-primary" role="alert">
+            <a href="./public/weekThree/index.html" class="alert-link" target="_blank"> Week Three</a>
+         </div>
+         <div class="alert alert-primary" role="alert">
+            <a href="./public/weekFour/index.html" class="alert-link" target="_blank"> Week Four</a>
+         </div>
     </div>  
     
 </body>
