revised the link of week four

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="./public/weekThree/index.html" class="alert-link" target="_blank"> Week Three</a>
          </div>
          <div class="alert alert-primary" role="alert">
-            <a href="./public/weekFour/index.html" class="alert-link" target="_blank"> Week Four</a>
+            <a href="./public/weekThree/question.html" class="alert-link" target="_blank"> Week Four(常見問題)</a>
          </div>
     </div>  
     
