--- a/public/weekThree/index.html
+++ b/public/weekThree/index.html
@@ -3,29 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
-<link rel="stylesheet" href="../css/WeekThree/main.css">
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
+    <%= links %>
    
     <title>第三週版型作業</title>
 </head>
 <body>
-    <header class="header">
-<button class="menu-button" id="menu-button">
-    <span>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><defs><style>.a{fill:#fff;}.b{fill:#fff;}</style></defs><path class="a" d="M0,0H24V24H0Z"/><path class="b" d="M3,18H21V16H3Zm0-5H21V11H3ZM3,6V8H21V6Z"/></svg>
-    </span>
-</button>
-<img src="../src/images/week3/logo-new_工作區域 1-1.png" alt="Icon" class="header-icon">
-<ul class="nav">
-    <li><a href="#">系列鏡框</a></li>
-    <li><a href="#">門市據點</a></li>
-    <li><a href="#">部落格</a></li>
-    <li><a href="#">常見問題</a></li>
-</ul>
-</header>
+    <%= header %>
     <div class="jumbotron-container">
         <div class="jumbotron-img">
             <div>
@@ -184,6 +167,22 @@
                     <input type="text" id="name" placeholder="陳小明">
                     <label for="phone">聯絡電話</label>
                     <input type="text" id="phone" placeholder="0912-345-678">
+                    <label for="email">電子郵件</label>
+                    <input type="text" id="email" placeholder="example@email.com">
+                    <label for="comment">意見反應</label>
+                    <textarea name="comment" id="comment" class="comment" placeholder="請輸入您的意見"></textarea>
+                    
+                    <div class="check-box"><input type="checkbox" name="privacy" id="privacy">
+                    <label for="privacy">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label></div>
+                    <button>確認送出</button>
+                </form>
+            </div>
+        </div>
+    </div> 
+    <%= footer %>
+   
+</body>
+</html> <input type="text" id="phone" placeholder="0912-345-678">
                     <label for="email">電子郵件</label>
                     <input type="text" id="email" placeholder="example@email.com">
                     <label for="comment">意見反應</label>
