--- a/public/weekFour/index.html
+++ b/public/weekFour/index.html
@@ -8,8 +8,11 @@
 <link rel="stylesheet" href="../css/WeekThree/main.css">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
+
+<title>第四週作業</title> 
    
-    <title>第四週作業</title>
+
+    <!-- <title>第四週作業</title> -->
 </head>
 <body>
     <header class="header">
@@ -26,6 +29,7 @@
     <li><a href="#">常見問題</a></li>
 </ul>
 </header>
+
 
 
 <div class="jumbotron-container">
