--- a/public/weekSix/index.html
+++ b/public/weekSix/index.html
@@ -46,7 +46,7 @@ current: index
                             <a class="nav-link" href="#">Contact</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link svg-color-light" href="#">
                                       <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
                             </a>
                         </li>
@@ -56,7 +56,6 @@ current: index
         </div>
     </header>
     <main class="container-fluid mainContent">
-        <!-- jumbotron -->
         <section>
             <div class="row justify-content-md-start align-items-center">
                 <div class="container">
@@ -73,12 +72,14 @@ current: index
             <div class="row justify-content-md-end">
                 <div class="col-lg-6 mainBackground">
                 </div>
+                <div class="mask"></div>
             </div>
+
         </section>
     </main>
     <footer>
         <div class="footer-jumbotron ">
-            <div class="jumbotronMask "></div>
+            <div class="mask"></div>
             <div class="container h-100 ">
                 <div class="row h-100 align-items-center ">
                     <div class="col-lg-5 col-sm-3 ">
