Added links of week six and week seven

--- a/index.html
+++ b/index.html
@@ -1,33 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./public/css/all.css">
     <title>Document</title>
 </head>
+
 <body>
-   
+
     <div class="container">
         <h1>六角學園 網頁切版直播班 版型作業</h1>
         <h3>Index</h3>
         <div class="alert alert-primary" role="alert">
             <a href="./public/weekOne/index.html" class="alert-link" target="_blank"> Week One</a>
-         </div>
-         <div class="alert alert-primary" role="alert">
+        </div>
+        <div class="alert alert-primary" role="alert">
             <a href="./public/weekTwo/index.html" class="alert-link" target="_blank"> Week Two</a>
-         </div>
-         <div class="alert alert-primary" role="alert">
+        </div>
+        <div class="alert alert-primary" role="alert">
             <a href="./public/weekThree/index.html" class="alert-link" target="_blank"> Week Three</a>
-         </div>
-         <div class="alert alert-primary" role="alert">
+        </div>
+        <div class="alert alert-primary" role="alert">
             <a href="./public/weekThree/question.html" class="alert-link" target="_blank"> Week Four(未完成)</a>
-         </div>
-         <div class="alert alert-primary" role="alert">
+        </div>
+        <div class="alert alert-primary" role="alert">
             <a href="./public/weekFive/index.html" class="alert-link" target="_blank"> Week Five</a>
-         </div>
-    </div>  
-    
+        </div>
+        <div class="alert alert-primary" role="alert">
+            <a href="./public/weekSix/index.html" class="alert-link" target="_blank"> Week Six</a>
+        </div>
+        <div class="alert alert-primary" role="alert">
+            <a href="./public/weekSeven/index.html" class="alert-link" target="_blank"> Week Seven</a>
+        </div>
+    </div>
+
 </body>
+
 </html>
