--- a/public/weekSix/product.html
+++ b/public/weekSix/product.html
@@ -50,135 +50,7 @@
     </div>
 </header>
  
-<main class="mainContent">
-    <section>
-        <div class="row justify-content-md-start align-items-center ">
-            <div class="container">
-                <div class="mainJumbotron col-md-6 text-center text-md-left">
-                    <p class="h1 col-md-10 mb-4 mb-sm-4">Enjoy Your <br>Minimalist Lifestyle.</p>
-                    <p class="h4 col-md-10 col-sm-12 mb-md-5 ">The best crafts in Taiwan. Get your free shipping on the first order.</p>
-                    <button class="btn btn-green2 btn-fluid">
-                            Shop now
-                        </button>
-
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-md-end">
-            <div class="col-lg-6 mainBackground">
-            </div>
-            <div class="mask"></div>
-        </div>
-
-    </section>
-    <section>
-        <ul class="propagandaList container mt-md-7">
-            <li>
-                <div class="row mb-md-4 mb-2">
-                    <div class="col-md-6 text-center mb-2 mb-md-4">
-                        <img src="../src/images/week6/neven-krcmarek-F1oNsAykHa0-unsplash.jpg" alt="">
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-4 d-flex flex-column justify-content-center">
-                        <h4 class="mb-3">Special Clays</h4>
-                        <p class="mb-4">A general body formulation for contemporary earthenware is 25% kaolin, 25% ball clay, 35% quartz and 15% feldspar.</p>
-                        <a href="#" class="green">Learn More</a>
-                    </div>
-                </div>
-
-            </li>
-            <li>
-                <div class="row flex-row-reverse mb-4 md-3">
-                    <div class="col-md-6 text-center mb-2 mb-md-4">
-                        <img src="../src/images/week6/tom-crew-7HuTGlUfQSo-unsplash.jpg" alt="">
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-4 d-flex flex-column align-items-md-end justify-content-center">
-                        <h4 class="mb-3">Less is more</h4>
-                        <p class="mb-4 text-md-right">Trimming pottery can transform a weighty Earth-bound pot into one that is a pleasure to hold, look at, and use.</p>
-                        <a href="#" class="green">Learn More</a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class="row mb-md-7 mb-6">
-                    <div class="col-md-6 text-center  mb-2 mb-md-4">
-                        <img src="../src/images/week6/tom-crew-GOtE6-VOwH0-unsplash.jpg" alt="">
-                    </div>
-                    <div class="col-md-1"></div>
-                    <div class="col-md-4 d-flex flex-column justify-content-center">
-                        <h4 class="mb-3">Marvelous Detail</h4>
-                        <p class="mb-4">In Craftsman, the art director, working with marketers, develops or creates an idea of a new creation.</p>
-                        <a href="#" class="green">Learn More</a>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </section>
-    <section>
-        <div class="contactJumbotron">
-            <div class="backgroundImg d-flex align-items-md-center">
-                <div class="container">
-                    <div class="row justify-content-between">
-                        <h2 class="slogan text-white col-10 col-md-4 mt-2">“I want to make the life more simple by crafts.”</h2>
-                        <div class="col-md-5"></div>
-                        <div class="actor col-10 col-md-2">
-                            <p class="title">Art Director</p>
-                            <h4 class="name text-white mb-3">Hsiao-Ming Chen</h4>
-                            <ul class="d-flex pl-0 mb-0">
-                                <li class="mr-2"><a href="#" class="green">Instagram</a></li>
-                                <li><a href="#" class="green">Twitter</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="slide container mt-md-7 mb-md-7 mt-6 mb-6 ">
-            <ul class="row flex-nowrap pl-0 mb-0">
-                <li class="col-md-4 col-9">
-                    <div class="card">
-                        <div class="card-img-top mb-2" alt="Card image cap "></div>
-                        <div>
-                            <h4 class="mb-1">Tatami Cup</h4>
-                            <p class="mb-0">NT$1,080 <del>NT$1,200</del></p>
-                        </div>
-                    </div>
-                </li>
-                <li class="col-md-4 col-9">
-                    <div class="card">
-                        <div class="card-img-top mb-2" alt="Card image cap "></div>
-                        <div>
-                            <h4 class="mb-1">Couple Collection</h4>
-                            <p class="mb-0">NT$2,800</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="col-md-4 col-9">
-                    <div class="card">
-                        <div class="card-img-top mb-2" alt="Card image cap "></div>
-                        <div>
-                            <h4 class="mb-1">Brotherhood Vase</h4>
-                            <p class="mb-0">NT$4,800</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="col-md-4 col-9">
-                    <div class="card">
-                        <div class="card-img-top mb-2" alt="Card image cap "></div>
-                        <div>
-                            <h4 class="mb-1">Brotherhood Vase</h4>
-                            <p class="mb-0">NT$4,800</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </section>
-</main>
+<h1>hahah</h1>
 
 
     <footer>
